--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,13 @@
-<section>
-    <h2>lolz</h2>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <section class="hero"></section>
+    <h2>Discover the magic of <span>photography</span> in our school</h2>
+    <p>Our photography school offers an unforgettable journey, where you can learn the basics of composition, master technical skills, translate your unique ideas.</p>
+</body>
+</html>
