--- a/src/partials/our_courses.html
+++ b/src/partials/our_courses.html
@@ -23,7 +23,7 @@
             <li class="courses-item">
                 <div class="courses-box">
                     <h3 class="courses-number">02</h3>
-                  <img src="../img/arrow2.png" class="courses-img" alt="arrow2">
+                  <img src="../img/arrow2.png" class="courses-img" alt="arrow">
                 </div>
                 <h2 class="courses-info">Landscape photography</h2>
                 <p class="courses-descriptions">In this course, you'll learn how to choose the right angles, frame landscapes, and create depth and perspective in your images.</p>
