headre styles start

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,3 +4,17 @@
     --gradient-color: #1D1D1D;
     --bacground-color: #121212;
   }
+
+  .separation{
+    border: 1px solid rgba(255, 255, 255, 0.2);
+border-radius: 12px;
+width: 822px;
+height: 60px;
+}
+
+.header-logo{
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+    width: 123px;
+    height: 16px;
+}
