--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <section class="header">
+    <header class="header">
         <div class="separation">
-        <h1>Focus.Frame</h1>
+        <h1 class="header-logo">Focus.Frame</h1>
         <ul class="header-list">
             <li class="header-sections">ABOUT US</li>
             <li class="header-sections">OUR COURSES</li>
@@ -18,6 +20,6 @@
         </ul>
     </div>
         <button class="header-button">SIGN UP</button>
-    </section>
+    </header>
 </body>
 </html>
