--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="separation">
-        <h1 class="header-logo">Focus.Frame</h1>
+        <div class="header-containre">
+        <img src="../img/logo.webp" alt="Focus.Frame" class="header-logo">
         <ul class="header-list">
             <li class="header-sections">ABOUT US</li>
             <li class="header-sections">OUR COURSES</li>
@@ -21,5 +21,6 @@
     </div>
         <button class="header-button">SIGN UP</button>
     </header>
+</div>
 </body>
 </html>
