--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -4,18 +4,91 @@
     --gradient-color: #1D1D1D;
     --bacground-color: #121212;
   }
+  
+  .hero-containre{
+    border-radius: 30px;
+   width: 1080px;
+   height: 600px;
+   background-image: url(../img/hero-person.webp), linear-gradient(#1D1D1D,#1D1D1D);
+   background-repeat: no-repeat, no-repeat;
+   background-position: right bottom, center;
+   font-family: "DM Sans", sans-serif;
+  }
 
   .hero-tytle{
-    background-color: var(--gradient-color);
-font-family: var(--font-family);
+    color: var(--wite-color);
 font-weight: 500;
 font-size: 64px;
 line-height: 106%;
 letter-spacing: -0.04em;
+padding-top: 80px;
+padding-left: 50px;
+margin-right: 467px;
   }
-
   .hero-photography{
 font-style: italic;
 font-weight: 400;
 color: var(--camera-bacground-color);
   }
+
+.hero-text{
+  width: 418px;
+  height: 54px;
+  color: var(--wite-color);
+  font-weight: 400;
+font-size: 14px;
+line-height: 129%;
+letter-spacing: -0.02em;
+padding-left: 50px;
+padding-right: 620px;
+margin-bottom: 136px;
+margin-top: 20px;
+}
+
+.hero-students-containre{
+  display: flex;
+  gap: 40px;
+  padding-bottom:50px;
+  padding-left: 50px;
+  padding-right: 642px;
+  width: 388px;
+  height: 56px;
+}
+
+.hero-students-look{
+  display: flex;
+}
+.hero-see-students{
+  width: 82px;
+height: 56px;
+}
+
+.hero-students-reviews{
+  display: flex;
+}
+
+.hero-reviews{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 125%;
+  letter-spacing: -0.04em;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.hero-reviews-mini{
+  margin-right: 12px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hero-number{
+  color: var(--wite-color);
+}
+
+.hero-happy-students{
+  color: var(--wite-color);
+  display: flex;
+  width: 82px;
+height: 56px;
+flex-direction: column;
+}
