--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
     <section class="hero">
-    <h2 class="hero-tytle">Discover the magic of <span class="hero-photography">photography</span> in our school</h2>
-    <p class="hero-text">Our photography school offers an unforgettable journey, where you can learn the basics of composition, master technical skills, translate your unique ideas.</p>
-    <img src="../img/students.webp" alt="students" class="hero-students">
-    <p class="hero-see_students">Our happy students</p>
-    <img src="../img/arrow.webp" alt="arrow" class="hero-arrow">
-    <img src="../img/star.webp" alt="cyrcle with star inside" class="hero-">
-    <p class="hero-reviews">Reviews</p>
-    <p class="hero-number">+1500</p>
-</section>
-</body>
+        <div class="containre hero-containre">
+      <h2 class="hero-tytle">
+        Discover the magic of
+        <span class="hero-photography">photography</span> in our school
+      </h2>
+        <p class="hero-text">
+          Our photography school offers an unforgettable journey, where you can
+          learn the basics of composition, master technical skills, translate
+          your unique ideas.
+        </p>
+        <div class="hero-students-containre">
+        <div class="hero-students-look">
+          <img
+            src="../img/students.webp"
+            alt="students"
+            class="hero-students"
+          />
+          <div class="hero-happy-students">
+          <p class="hero-see-students">Our happy students </p>
+          <p class="hero-arrow">→</p>
+        </div>
+        </div>
+        <div class="hero-students-reviews">
+        <img
+          src="../img/star.webp"
+          alt="cyrcle with star inside"
+          class="hero-star"
+        />
+        <div class="hero-reviews-mini">
+        <p class="hero-reviews">Reviews</p>
+        <p class="hero-number">+1500</p>
+    </div>
+        </div>
+      </div>
+    </div>
+    </section>
+  </body>
 </html>
