--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,48 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
-  <body>
-    <section class="hero">
-        <div class="containre hero-containre">
-      <h2 class="hero-tytle">
-        Discover the magic of
-        <span class="hero-photography">photography</span> in our school
-      </h2>
-        <p class="hero-text">
-          Our photography school offers an unforgettable journey, where you can
-          learn the basics of composition, master technical skills, translate
-          your unique ideas.
-        </p>
-        <div class="hero-students-containre">
-        <div class="hero-students-look">
-          <img
-            src="../img/students.webp"
-            alt="students"
-            class="hero-students"
-          />
-          <div class="hero-happy-students">
-          <p class="hero-see-students">Our happy students </p>
+<section class="hero">
+  <div class="containre hero-containre">
+    <h2 class="hero-tytle">
+      Discover the magic of
+      <span class="hero-photography">photography</span> in our school
+    </h2>
+    <p class="hero-text">
+      Our photography school offers an unforgettable journey, where you can
+      learn the basics of composition, master technical skills, translate your
+      unique ideas.
+    </p>
+    <div class="hero-students-containre">
+      <div class="hero-students-look">
+        <img src="./img/students.webp" alt="students" class="hero-students" />
+        <div class="hero-happy-students">
+          <p class="hero-see-students">Our happy students</p>
           <p class="hero-arrow">→</p>
         </div>
-        </div>
-        <div class="hero-students-reviews">
+      </div>
+      <div class="hero-students-reviews">
         <img
-          src="../img/star.webp"
+          src="./img/star.webp"
           alt="cyrcle with star inside"
           class="hero-star"
         />
         <div class="hero-reviews-mini">
-        <p class="hero-reviews">Reviews</p>
-        <p class="hero-number">+1500</p>
-    </div>
+          <p class="hero-reviews">Reviews</p>
+          <p class="hero-number">+1500</p>
         </div>
       </div>
     </div>
-    </section>
-  </body>
-</html>
+  </div>
+</section>
