--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -13,7 +13,7 @@
         By clicking on “Send” button, you agree to our Privacy Policy, and allow
         Promodo to use this information for marketing purposes.
       </h5>
-      <img src="../img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
-      <img src="../img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
+      <img src="./img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
+      <img src="./img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
     </section>
 
