--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -5,9 +5,9 @@
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
       </p>
-      <label for="name" class="sign-up-namelabel"><input type="text"/></label>
-      <label for="email" class="sign-up-emaillabel"><input type="text"/></label>
-      <label for="message" class="sign-up-messagelabel"><input type="text"/></label>
+      <label  for="name" class="sign-up-namelabel"><input type="text" placeholder="Enter your name"/></label>
+      <label for="email" class="sign-up-emaillabel"><input type="text" placeholder="Enter your email"/></label>
+      <label for="message" class="sign-up-messagelabel"><input type="text" placeholder="Message"/></label>
       <button class="sign-up-button">SEND</button>
       <h5 class="sign-up-bottomtext">
         By clicking on “Send” button, you agree to our Privacy Policy, and allow
