--- a/src/partials/block.html
+++ b/src/partials/block.html
@@ -1,4 +1,6 @@
 
     <section class="block-section">
-        <h1 class="block-text">MASTER <span class="block-subtext">YOUR PHOTOGRAPHY</span> SKILLS WITH US!</h1>
+        <div class="block-line"></div>
+        <h1 class="block-text">MASTER <span class="block-span">YOUR PHOTOGRAPHY</span> SKILLS WITH US!</h1>
+        <div class="block-line"></div>
     </section>
