--- a/src/partials/our_mentors.html
+++ b/src/partials/our_mentors.html
@@ -1,35 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
     <section class="our-mentors">
-    <h1>Our <span>Mentors</span></h1>
+        <div class="containre">
+    <h1 class="our-mentors-tytle">Our <span class="our-mentors-span">Mentors</span></h1>
     <ul class="mentors-list">
         <li class="mentors-listitem">
-            <img src="../img/mentor1.webp" alt="mentor woman" class="mentors-photo">
+            <img src="./img/mentor1.webp" alt="mentor woman" class="mentors-photo">
             <h2 class="mentors-name">Emilia Smith</h2>
             <p class="mentors-experience"> 1.5 years of experience</p>
         </li>
         <li class="mentors-listitem">
-            <img src="../img/mentor2.webp" alt="mentor man" class="mentors-photo">
+            <img src="./img/mentor2.webp" alt="mentor man" class="mentors-photo">
             <h2 class="mentors-name">Alex Lebedev</h2>
             <p class="mentors-experience"> 3.5 years of experience</p>
         </li>
-        <li class="mentors-listitem">
-            <img src="../img/mentor3.webp" alt="mentor woman" class="mentors-photo">
+        <li class="mentors-listitem-special">
+            <img src="./img/mentor3.webp" alt="mentor woman" class="mentors-photo">
             <h2 class="mentors-name">Mia Dubrovska</h2>
             <p class="mentors-experience"> 2.0 years of experience</p>
         </li>
         <li class="mentors-listitem">
-            <img src="../img/mentor4.webp" alt="mentor man" class="mentors-photo">
+            <img src="./img/mentor4.webp" alt="mentor man" class="mentors-photo">
             <h2 class="mentors-name">Eliot Kovalev</h2>
             <p class="mentors-experience"> 4.0 years of experience</p>
         </li>
     </ul>
+</div>
 </section>
-</body>
-</html>
