--- a/src/partials/our_courses.html
+++ b/src/partials/our_courses.html
@@ -1,7 +1,9 @@
 
     <section class="courses">
+        <div class="box">
         <h2 class="courses-title">Our <span class="courses-text">Courses</span></h2>
         <p class="courses-description">At our photography school, we offer a variety of courses that cover all aspects of this fascinating art. Regardless of your experience or skill level, we have courses to suit your needs and goals.</p>
+    </div>
         <ul class="courses-list">
             <li class="courses-item">
                 <div class="courses-box">
