--- a/src/partials/block.html
+++ b/src/partials/block.html
@@ -1,6 +1,8 @@
 
     <section class="block-section">
+        <div class="container">
         <div class="block-line"></div>
         <h1 class="block-text">MASTER <span class="block-span">YOUR PHOTOGRAPHY</span> SKILLS WITH US!</h1>
         <div class="block-line"></div>
+    </div>
     </section>
