--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
     <header class="header">
+        <div class="container">
         <div class="header-containre">
         <img src="../img/logo.webp" alt="Focus.Frame" class="header-logo">
         <ul class="header-list">
@@ -10,4 +11,5 @@
         </ul>
     </div>
         <button class="header-button">SIGN UP</button>
+    </div>
     </header>
