--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,5 @@
 <section class="hero">
+  <div class="container">
   <div class="containre hero-containre">
     <h2 class="hero-tytle">
       Discover the magic of
@@ -30,4 +31,5 @@
       </div>
     </div>
   </div>
+</div>
 </section>
