--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,7 @@
 
     <!-- Початок -->
     <section class="footer">
+      <div class="continer">
       <h2 class="footer-title">Focus.Frame</h2>
       <ul class="footer-teladress">
         <li class="teladress-item">
@@ -58,4 +59,5 @@
       <div class="info">
         <h2 class="info-text">2023 Focus Frame © All rights reserved</h2>
       </div>
+    </div>
     </section>
