--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -1,5 +1,6 @@
 
     <section class="sign-up-section">
+      <div class="container">
       <h1 class="sign-up-text">Sign<span class="sign-up-span">Up</span></h1>
       <p class="sign-up-subtext">
         Please use the form below to contact us. Enter your name, email, and
@@ -15,5 +16,6 @@
       </h5>
       <img src="./img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
       <img src="./img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
+    </div>
     </section>
 
