--- a/src/partials/our_courses.html
+++ b/src/partials/our_courses.html
@@ -1,5 +1,6 @@
 
     <section class="courses">
+        <div class="container">
         <div class="box">
         <h2 class="courses-title">Our <span class="courses-text">Courses</span></h2>
         <p class="courses-description">At our photography school, we offer a variety of courses that cover all aspects of this fascinating art. Regardless of your experience or skill level, we have courses to suit your needs and goals.</p>
@@ -30,4 +31,5 @@
                 <p class="courses-descriptions">During this course, you will learn to choose the right lighting, reproduce the mood and expressions on the faces of the models.</p>
             </li>
         </ul>
+    </div>
     </section>
