--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
     <header class="header">
-        <div class="container">
-        <div class="header-containre">
-        <img src="../img/logo.webp" alt="Focus.Frame" class="header-logo">
+        <div class="container header-containre">
+        <div class="header-div">
+        <img src="./img/logo.webp" alt="Focus.Frame" class="header-logo">
         <ul class="header-list">
             <li class="header-sections">ABOUT US</li>
             <li class="header-sections">OUR COURSES</li>
@@ -10,6 +10,6 @@
             <li class="header-sections">CONTACTS</li>
         </ul>
     </div>
-        <button class="header-button">SIGN UP</button>
+        <button class="header-button"> <span class="header-span">SIGN UP</span></button>
     </div>
     </header>
