--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -1,6 +1,7 @@
 
     <section class="sign-up-section">
       <div class="container">
+        <div class="sing-up-textcontainer">
       <h1 class="sign-up-text">Sign<span class="sign-up-span">Up</span></h1>
       <p class="sign-up-subtext">
         Please use the form below to contact us. Enter your name, email, and
@@ -11,11 +12,14 @@
       <label for="message" class="sign-up-messagelabel"><input type="text" placeholder="Message"/></label>
       <button class="sign-up-button">SEND</button>
       <h5 class="sign-up-bottomtext">
-        By clicking on “Send” button, you agree to our Privacy Policy, and allow
+        By clicking on “Send” button, you agree to our <span class="sign-up-bottomspan"> Privacy Policy</span>, and allow
         Promodo to use this information for marketing purposes.
       </h5>
+    </div>
+    <div class="sign-up-imagecontainer">
       <img src="./img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
       <img src="./img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
     </div>
+  </div>
     </section>
 
