--- a/src/css/sign_up.css
+++ b/src/css/sign_up.css
@@ -6,8 +6,8 @@
   }
 
 .sign-up-section {
-  margin-top: 100px;
-  margin-bottom: 150px;
+  padding-top: 100px;
+  padding-bottom: 150px;
   background-color: var(--bacground-color) ;
 }
 
