--- a/src/css/our_courses.css
+++ b/src/css/our_courses.css
@@ -109,4 +109,6 @@
    align-items: center;
    margin-left: 32px;
    margin-right: 32px;
+   justify-content: space-between;
+   margin-bottom: 50px;
 }
