--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,3 +4,14 @@
     --gradient-color: #1D1D1D;
     --bacground-color: #121212;
   }
+
+.footer-teladress {
+  width: 143px;
+  height: 46px;
+}
+
+.footer {
+  background-image: url(../img/Graphic.webp);
+  width: 1278px;
+height: 331px;
+}
