--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,4 +1,5 @@
 <section>
+  <div class="container">
     <h2 class="about-logo"> About <span class="about-subtext"> Us </span> </h2>
   <div class="about-text">
     <img src="../img/Rectangle 6.webp" class="image-kamera" alt="rectangle"/>
@@ -20,4 +21,5 @@
     </p>
 </div>
   </div>
+</div>
 </section>
