--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,5 @@
-<section>
+<section>\
+  <div class="container">
   <h2 class="reviews-logo">Reviews</h2>
   <ul>
     <li>
@@ -24,4 +25,5 @@
       </p>
     </li>
   </ul>
+</div>
 </section>
