--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,7 +11,7 @@
 }
 
 .footer {
-  background-image: url(../img/Graphic.webp);
+  background-image: url(../img/footer-phone.webp);
   width: 1278px;
 height: 331px;
 }
