--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,7 +3,7 @@
   <h2 class="reviews-logo">Reviews</h2>
   <ul>
     <li>
-      <img src="../img/user (1).webp" class="reviwes-images" alt="user1" />
+      <img src="../img/reviewers1.webp" class="reviwes-images" alt="user1" />
       <h3>Abraham Baker</h3>
       <p>Student</p>
       <p>
@@ -14,7 +14,7 @@
       </p>
     </li>
     <li>
-      <img src="../img/user (2).webp" class="reviwes-images" alt="user2" />
+      <img src="../img/reviewers2.webp" class="reviwes-images" alt="user2" />
       <h3>Amanda Lowery</h3>
       <p>Student</p>
       <p>
