almost done section sign up

--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -1,6 +1,7 @@
 
     <section class="sign-up-section">
       <div class="container">
+        <div class="sign-up-container">
         <div class="sing-up-textcontainer">
       <h1 class="sign-up-text">Sign<span class="sign-up-span">Up</span></h1>
       <p class="sign-up-subtext">
@@ -20,6 +21,7 @@
       <img src="./img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
       <img src="./img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
     </div>
+  </div>
   </div>
     </section>
 
