--- a/src/css/sign_up.css
+++ b/src/css/sign_up.css
@@ -11,6 +11,13 @@
   background-color: var(--bacground-color) ;
 }
 
+.sign-up-container{
+  display: flex ;
+  flex-wrap: nowrap;
+}
+
+
+
 .sign-up-text {
   font-family: "DM Sans" sans-serif;
 font-weight: 500;
@@ -133,3 +140,5 @@ width: 350px;
 height: 540px;
 background-color: var(--gradient-color);
 }
+
+
