--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,13 +2,13 @@
     <!-- Початок -->
     <section class="footer">
       <div class="continer">
-      <h2 class="footer-title">Focus.Frame</h2>
+      <img src="../img/logo.webp" alt="logo in footer">
       <ul class="footer-teladress">
         <li class="teladress-item">
           <h2 class="footer-tel">UA: +38 066 543 8912</h2>
         </li>
         <li class="teladress-item">
-          <h3 class="footer-adress">Ukraine, Kyiv</h3>
+          <address class="adres">Ukraine, Kyiv</address>
         </li>
       </ul>
       <!-- соц Мережі -->
