--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,9 +1,8 @@
-<section>
+<section class="about">
   <div class="container">
     <h2 class="about-logo"> About <span class="about-subtext"> Us </span> </h2>
   <div class="about-text">
     <img src="../img/camera.webp" class="image-kamera" alt="rectangle"/>
-    <div>
     <p class="section-text">
       Our photography school is designed to teach you everything you need to
       know about this magical art. Regardless of your experience or skill level,
@@ -19,7 +18,6 @@
       of photography, discover your own style and develop your own visual
       language.
     </p>
-</div>
   </div>
 </div>
 </section>
