--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -1,15 +1,22 @@
 
     <section class="sign-up-section">
       <div class="container">
+        <div class="sign-up-container">
         <div class="sing-up-textcontainer">
       <h1 class="sign-up-text">Sign<span class="sign-up-span">Up</span></h1>
       <p class="sign-up-subtext">
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
       </p>
-      <label  for="name" class="sign-up-namelabel"><input type="text" placeholder="Enter your name"/></label>
-      <label for="email" class="sign-up-emaillabel"><input type="text" placeholder="Enter your email"/></label>
-      <label for="message" class="sign-up-messagelabel"><input type="text" placeholder="Message"/></label>
+      <div class="sign-up-namecontainer">
+      <label  for="name" class="sign-up-namelabel"><input type="text" placeholder="Enter your name" class="namelabel"/></label>
+    </div>
+    <div class="sign-up-emailcontainer">
+      <label for="email" class="sign-up-emaillabel"><input type="text" placeholder="Enter your email" class="emaillabel"/></label>
+    </div>
+    <div class="sign-up-messagecontainer">
+      <label for="message" class="sign-up-messagelabel"><input type="text" placeholder="Message" class="messagelabel"/></label>
+    </div>
       <button class="sign-up-button">SEND</button>
       <h5 class="sign-up-bottomtext">
         By clicking on “Send” button, you agree to our <span class="sign-up-bottomspan"> Privacy Policy</span>, and allow
@@ -19,7 +26,9 @@
     <div class="sign-up-imagecontainer">
       <img src="./img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
       <img src="./img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
-    </div>
+
+  </div>
+  </div>
   </div>
     </section>
 
