--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
     <!-- Початок -->
     <section class="footer">
       <div class="continer">
-      <img src="../img/logo.webp" alt="logo in footer">
+      <img src="../img/logo.webp" class="logo-footer" alt="logo in footer">
       <ul class="footer-teladress">
         <li class="teladress-item">
           <h2 class="footer-tel">UA: +38 066 543 8912</h2>
