--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,15 +11,35 @@ background-color: #121212;
 
 }
 
+.adres {
+  color: var(--wite-color);
+  font-family: DM Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0%;
+  text-align: left;
+  padding-top: 10px;
+  padding-right: 62px;
+}
 
 
 .footer-tel {
 color:  var(--wite-color);
 font-family: DM Sans;
 position: static;
-width: 143px;
-height: 18px;
 font-size: 14px;
+font-family: DM Sans;
+font-size: 14px;
+font-weight: 400;
+line-height: 18px;
+letter-spacing: 0%;
+text-align: left;
+}
+
+.footer-teladress {
+   margin-left: 100px;
+   margin-top: 24.75px;
 }
 
 .footer-adress {
@@ -30,19 +50,33 @@ line-height: 129%;
 color: var(--wite-color);
 }
 
+.rights-text {
+  font-family: DM Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0%;
+  text-align: left;
+  color: var(--wite-color);
+}
+
 .rights {
-font-family: var(--font-family);
-font-weight: 400;
-font-size: 14px;
-line-height: 129%;
-color: var(--wite-color);
-width: 181px;
-height: 36px;
+  width: 171px;
+  height: 36px;
+  left: 100px;
+  right: 1007px;
+  top: 270px;
+  bottom: 25px;
 }
 
 .box-sox {
 width: 224px;
 height: 170px;
+}
+
+.logo-footer {
+  margin-left: 100px;
+  margin-top: 50px;
 }
 
 .footer-Socialnetworks {
