--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,6 +2,7 @@
     <!-- Початок -->
     <section class="footer">
       <div class="continer">
+        
       <img src="../img/logo.webp" class="logo-footer" alt="logo in footer">
       <ul class="footer-teladress">
         <li class="teladress-item">
@@ -12,6 +13,7 @@
         </li>
       </ul>
       <!-- соц Мережі -->
+    <div class="info-box">
       <ul class="footer-Socialnetworks">
         <li class="Socialnetworks">
           <h2 class="Socialnetworks-item">INSTAGRAM</h2>
@@ -42,6 +44,7 @@
           <h2 class="we-text">CONTACTS</h2>
         </li>
       </ul>
+    </div>
 
       <input
         type="email"
