--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -23,11 +23,14 @@
         Promodo to use this information for marketing purposes.
       </h5>
     </div>
-    <div class="sign-up-imagecontainer">
+    <div class="sing-up-imagecontainer">
+      <div class="sign-up-cameracontainer">
       <img src="./img/camera-for-sign_up.webp" alt="camera" class="sign-up-camera">
+    </div>
+    <div class="sign-up-videcameracontainer">
       <img src="./img/videocam-for-sign_up.webp" alt="camera-too" class="sign-up-videocamera">
-
-  </div>
+    </div>
+    </div>
   </div>
   </div>
     </section>
