--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,6 +3,8 @@
     <section class="footer">
       <div class="continer">
         
+        <div class="box">
+          <div class="footer-info">
       <img src="../img/logo.webp" class="logo-footer" alt="logo in footer">
       <ul class="footer-teladress">
         <li class="teladress-item">
@@ -12,6 +14,7 @@
           <address class="adres">Ukraine, Kyiv</address>
         </li>
       </ul>
+    </div>
       <!-- соц Мережі -->
     <div class="info-box">
       <ul class="footer-Socialnetworks">
@@ -45,7 +48,7 @@
         </li>
       </ul>
     </div>
-
+  </div>
       <input
         type="email"
         id="email"
@@ -56,7 +59,7 @@
       <button type="reset">Go</button>
 
       <div class="rights">
-        <h2 class="rights-text">Privacy Policy Public Offering Agreement</h2>
+        <h2 class="rights-text"><span class="policy-span">Privacy Policy</span> Public Offering Agreement</h2>
       </div>
 
       <div class="info">
