--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,69 +1,72 @@
-
-    <!-- Початок -->
-    <section class="footer">
-      <div class="continer">
-        
-        <div class="box">
-          <div class="footer-info">
-      <img src="../img/logo.webp" class="logo-footer" alt="logo in footer">
-      <ul class="footer-teladress">
-        <li class="teladress-item">
-          <h2 class="footer-tel">UA: +38 066 543 8912</h2>
-        </li>
-        <li class="teladress-item">
-          <address class="adres">Ukraine, Kyiv</address>
-        </li>
-      </ul>
-    </div>
+<!-- Початок -->
+<section class="footer">
+  <div class="continer">
+    <div class="box">
+      <div class="footer-info">
+        <img src="../img/logo.webp" class="logo-footer" alt="logo in footer" />
+        <ul class="footer-teladress">
+          <li class="teladress-item">
+            <h2 class="footer-tel">UA: +38 066 543 8912</h2>
+          </li>
+          <li class="teladress-item">
+            <address class="adres">Ukraine, Kyiv</address>
+          </li>
+        </ul>
+      </div>
       <!-- соц Мережі -->
-    <div class="info-box">
-      <ul class="footer-Socialnetworks">
-        <li class="Socialnetworks">
-          <h2 class="Socialnetworks-item">INSTAGRAM</h2>
-        </li>
-        <li class="Socialnetworks">
-          <h2 class="Socialnetworks-item">FACEBOOK</h2>
-        </li>
-        <li class="Socialnetworks">
-          <h2 class="Socialnetworks-item">YOUTUBE</h2>
-        </li>
-      </ul>
+      <div class="info-box">
+        <ul class="footer-Socialnetworks">
+          <li class="Socialnetworks">
+            <h2 class="Socialnetworks-item">INSTAGRAM</h2>
+          </li>
+          <li class="Socialnetworks">
+            <h2 class="Socialnetworks-item">FACEBOOK</h2>
+          </li>
+          <li class="Socialnetworks">
+            <h2 class="Socialnetworks-item">YOUTUBE</h2>
+          </li>
+        </ul>
 
-      <!-- ми -->
-      <ul class="courses-we">
-        <li class="we-item">
-          <h2 class="we-text">ABOUT US</h2>
-        </li>
-        <li class="we-item">
-          <h2 class="we-text">OUR COURSES</h2>
-        </li>
-        <li class="we-item">
-          <h2 class="we-text">OUR MENTORS</h2>
-        </li>
-        <li class="we-item">
-          <h2 class="we-text">REVIEWS</h2>
-        </li>
-        <li class="we-item">
-          <h2 class="we-text">CONTACTS</h2>
-        </li>
-      </ul>
-    </div>
-  </div>
+        <!-- ми -->
+        <ul class="courses-we">
+          <li class="we-item">
+            <h2 class="we-text">ABOUT US</h2>
+          </li>
+          <li class="we-item">
+            <h2 class="we-text">OUR COURSES</h2>
+          </li>
+          <li class="we-item">
+            <h2 class="we-text">OUR MENTORS</h2>
+          </li>
+          <li class="we-item">
+            <h2 class="we-text">REVIEWS</h2>
+          </li>
+          <li class="we-item">
+            <h2 class="we-text">CONTACTS</h2>
+          </li>
+        </ul>
+      </div>
+<div class="footer-inor">
       <input
         type="email"
         id="email"
         pattern=".+@example\.com"
         size="30"
+        class="input-email"
         placeholder="Enter your email"
       />
-      <button type="reset">Go</button>
-
-      <div class="rights">
-        <h2 class="rights-text"><span class="policy-span">Privacy Policy</span> Public Offering Agreement</h2>
-      </div>
-
-      <div class="info">
-        <h2 class="info-text">2023 Focus Frame © All rights reserved</h2>
-      </div>
+      <button type="reset" class="button-input">Go</button>
     </div>
-    </section>
+    </div>
+    <div class="rights">
+      <h2 class="rights-text">
+        <span class="policy-span">Privacy Policy</span> Public Offering
+        Agreement
+      </h2>
+    </div>
+
+    <div class="info">
+      <h2 class="info-text">2023 Focus Frame © All rights reserved</h2>
+    </div>
+  </div>
+</section>
