--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -81,6 +81,9 @@ footer {
   gap: 50px;
   justify-content: center;
   outline: red solid;
+  margin-top: 50px;
+  margin-right: 889px;
+  margin-left: 527px;
 }
 
 .Socialnetworks-item {
@@ -94,6 +97,49 @@ footer {
 .box {
   display: flex;
 }
+
+.input-email {
+  outline: red solid;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 18px;
+  padding-right: 78px;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  border-radius: 12px;
+  border: none;
+  width: 216px;
+  height: 30px;
+}
+
+.button-input {
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 17px;
+  padding-right: 17px;
+  font-family: DM Sans;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0px;
+  text-align: center;
+  border-radius: 12px;
+  color: var(--wite-color);
+  border: none;
+  background: var(--gradient-color);
+}
+
+/* .footer-inor {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  padding-top: 50px;
+  margin-bottom: 102px;
+} */
 
 .we-text {
   font-family: var(--font-family);
